--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
+
+
+swagger.host=8080-cs-231d1340-6ca9-449c-b196-27beb3504211.cs-us-east1-pkhd.cloudshell.dev
